--- a/index.html
+++ b/index.html
@@ -1,9 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>CALCULADORA</title>
 </head>
+<style type="text/css">
+	
+	body{
+		text-align: center;
+	}
+	form{
+		padding: 10px;
+		background-color: #eee;
+
+	}
+	input{
+		padding: 10px;
+		margin: 12px;
+		border: double;
+		background-color: ;
+		border-color:  orange;
+		border-radius: 7px;
+		box-shadow: 0px 7px 8px 0px;
+	}
+	.enviar:hover{
+		
+		cursor: pointer;
+	}
+
+
+</style>
 <body>
-<h1>Hola bendiciones amigos</h1>
+ <h6 style="font-family: sans-serif;">Calculadora PHP</h6>
+
+	<form  method="POST">
+		<input type="number" name="uno" placeholder="Ingrese un numero">
+		<br>
+		<input type="number" name="dos" placeholder="Ingrese un numero">
+		<br>
+		<input type="submit" value="Resultados" class="enviar">
+	</form>
+	<?php 
+	
+	if(isset($_POST['uno']) && isset($_POST['dos'])  ){
+
+		$numero1 = $_POST['uno'];
+		$numero2 = $_POST['dos'];
+
+		$mul=  $numero1 * $numero2;
+		$div=  $numero1 / $numero2;
+		$suma=  $numero1 + $numero2;
+		$resta=  $numero1 - $numero2;
+
+		echo " La multiplicacion  es : ". $mul ."<br>";
+		echo " La division  es : ". $div ."<br>";
+		echo " La suma  es : ". $suma ."<br>";
+		echo " La resta  es : ". $resta ."<br>";
+	}
+
+	
+
+ ?>
+ <h6>Calc hecho por coraje copyrithg 2020</h6>
 </body>
 </html>
+
